--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="alert-popover" class="vertical-center">
         <div>
             <h4>戒指流浪記</h4>
-            <p>如無法開啟，請複製連結到可支援的瀏覽器中開啟</p>
+            <p>如無法開啟，請複製連結到手機的瀏覽器中開啟</p>
             <ul>
                 <li>iOS請使用Safari開啟</li>
                 <li>Android建議用Chrome或火狐開啟</li>
