--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://aframe.io/releases/0.9.1/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.0/aframe/build/aframe-ar.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
     <link rel="stylesheet" href="style/bootstrap.min.css">
     <link rel="stylesheet" href="style/app.css">
     <title>戒指流浪記</title>
@@ -12,9 +12,16 @@
 <body>
     <a-scene embedded arjs='trackingMethod: best; debugUIEnabled: false;' vr-mode-ui="enabled: false">
 
-        <a-marker id="marker" preset='custom' type='pattern' url='data/marker.patt'>
-        <!-- <a-marker id="marker" preset='hiro' type='pattern' url='data/marker.patt'> -->
-        </a-marker>
+        <a-nft
+        id="marker"
+        type="nft"
+        url="data/marker"
+        smooth="true"
+        smoothCount="10"
+        smoothTolerance=".01"
+        smoothThreshold="5"
+        >
+        </a-nft>
         <a-entity camera></a-entity>
 
     </a-scene>
