--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a-nft
         id="marker"
         type="nft"
-        url="./data/marker"
+        url="AotR-Entry/data/marker"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
