--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>戒指流浪記</title>
 </head>
 <body>
-    <a-scene embedded arjs='trackingMethod: best; debugUIEnabled: false; displayWidth: 1280; displayHeight: 960;' vr-mode-ui="enabled: false">
+    <a-scene embedded arjs='trackingMethod: best; debugUIEnabled: false;' vr-mode-ui="enabled: false">
 
         <a-nft
         id="marker"
