--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         ntfLoaded
         id="marker"
         type="nft"
-        url="AotR/data/marker"
+        url="AotR-Entry/data/marker"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
